connect to the data base

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^8.3.2",
+    "mongose": "^0.0.2-security",
     "nodemon": "^3.1.0"
   }
 }
